<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_ultra_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="171dp"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_title_change_password"
            android:textColor="@color/text_color_grey"
            android:textSize="16sp"
            android:id="@+id/change_password"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/change_email"
            android:text="@string/setting_title_change_email"
            android:textColor="@color/text_color_grey"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/edit_profile"
            android:text="@string/setting_title_edit_profile"
            android:textColor="@color/text_color_grey"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_text_logout"
        android:textColor="@color/text_color_grey"
        android:textSize="16sp"
        android:id="@+id/btn_logout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp" />

</RelativeLayout>