<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/setting_title_change_email"
            android:textColor="@color/text_color_grey"
            android:id="@+id/title_toolbar"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:id="@+id/relative">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:background="@color/grey_ultra_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_gravity="center"
                    android:text="@string/setting_title_user_email"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_email"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_below="@+id/linearLayout"
                android:id="@+id/view_enter_email"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_email"
                    android:layout_marginBottom="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/setting_title_email"
                    android:textColor="@color/grey"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textFilter"
                    android:gravity="right"
                    android:id="@+id/edit_email"
                    android:hint="@string/setting_hint_edit_email"
                    android:textColorHint="@color/grey"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/grey"
                    android:background="@color/transparent"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/divider_below_edit_email"
                android:background="@color/bg_divider_dream_grey"
                android:layout_below="@+id/view_enter_email"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_title_notification_confirm"
                android:id="@+id/textView21"
                android:textColor="@color/grey"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/divider_below_edit_email"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/textView21"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView21"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:id="@+id/btn_send_changed_email"
                    android:background="@drawable/btn_circle_style_fill_blue"
                    android:text="@string/setting_title_btn_send_changed_password"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>