<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:id="@+id/offer_locality_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_more_info"
            android:textSize="16sp"
            android:id="@+id/textView22"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/edit_region"
            android:id="@+id/custom_view_region" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/img_divider"
            android:id="@+id/img_divider_region"
            android:layout_above="@+id/custom_view_district"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textFilter"
            android:gravity="right|center"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/transparent"
            android:id="@+id/edit_region"
            android:layout_toRightOf="@+id/textView23"
            android:layout_toEndOf="@+id/textView23" />


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/custom_view_region"
            android:layout_alignBottom="@+id/edit_district"
            android:id="@+id/custom_view_district"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/img_divider"
            android:layout_below="@+id/custom_view_district"
            android:layout_centerHorizontal="true"
            android:id="@+id/img_divider_district" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textFilter"
            android:gravity="right|center"
            android:background="@color/transparent"
            android:id="@+id/edit_district"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/edit_region"
            android:layout_alignLeft="@+id/edit_region"
            android:layout_alignStart="@+id/edit_region" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_region"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView23"
            android:layout_above="@+id/custom_view_district"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_edit_district"
            android:id="@+id/textView24"
            android:layout_alignBottom="@+id/custom_view_district"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:text="@string/title_btn_offer"
            android:background="@drawable/button_selector"
            android:id="@+id/btn_offer"
            android:layout_below="@+id/img_divider_district"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>